Bug 94639 - Meaningless Functions in Template Properties Dialogue
Summary: Meaningless Functions in Template Properties Dialogue
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
4.0.0.3 release
Hardware: Other Windows (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:5.2.0
Keywords:
Depends on:
Blocks: Template-Manager
  Show dependency treegraph
 
Reported: 2015-09-30 12:19 UTC by Harald Koester
Modified: 2016-11-05 12:37 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Harald Koester 2015-09-30 12:19:14 UTC
In order to reproduce:

[1] Create a simple writer template and save it.
[2] Open Template Manager and open folder with new template.
[3] Select new template and click Properties. The Template Properties dialogue is opened.
[4] Click into the thumbnail of the template.
[5] Ctrl+F: A find bar is displayed below the thumbnail. According my tests there is no find function according this bar. But you can move this bar around with very nice effects.
[6] Right click on thumbnail: A context menu is displayed: “Reload”, Image Off”. For me these functions are also meaningless.
[7] Right click inside the properties (left side of dialogue). Another context menu is opened. Some items are greyed, but some work somehow. E.g. with Undo you can delete the display of the properties line by line. But wherefore?

You even can crash LO with the template properties. Go on with:

[8] Close the properties dialogue and then click Edit.
[9] Change document title in properties dialogue: File > Properties > Description > Title. Then OK.
[10] Save template again: File > Close > Save.
[11] Close LibreOffice and start it again.
[12] Open Template Manager: File > New > Templates
[13] If not opened, open folder with created template. Now the title of the template and not the file name is displayed together with the thumbnail.
[14] Select template and open Properties. 
[15] Click into the thumbnail. Then twice Ctrl+F. LibreOffice crashes! Of course this is a very seldom case. I just like to mention it here.

This bug may be at least partly a duplicate of bug 64292 and bug 92579, but there also some new aspects (use of Ctrl+F, meaningless context menus).
Comment 1 Cor Nouws 2015-09-30 13:11:54 UTC
(In reply to Harald Koester from comment #0)
> 
> This bug may be at least partly a duplicate of bug 64292 and bug 92579, but
> there also some new aspects (use of Ctrl+F, meaningless context menus).

The source of the situation is the same: some Writer frame is used to render that preview.

Nicely found, by the way..
Comment 2 Regina Henschel 2016-01-04 16:59:52 UTC
That error is there already for long time, see bug 59214.
Comment 3 Yousuf Philips (jay) (retired) 2016-03-18 12:50:54 UTC
Akshay has submitted a patch for the properties dialog to be removed.

https://gerrit.libreoffice.org/#/c/23339/
Comment 4 Commit Notification 2016-04-26 14:04:32 UTC
Akshay Deep committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0bdb8baf57ac243f574db6273eed70127379e3fc

tdf#64292 tdf#94639 Meaningless Functions in Template Properties Dialog

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Harald Koester 2016-11-04 10:26:06 UTC
Checked with version 5.2.2. In new template manager a properties dialogue does not exist anymore. Hence bug closed.