tdf#94639 - Meaningless Functions in Template Properties Dialogue

Removed useless Template Properties Dialog.

Change-Id: I453abb67de9eb1515f98ff78cc7bebcc69482a1e